--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,55 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=PT+Sans:wght@700&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "PT Sans", sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.home,
+.art,
+.contactus,
+.code,
+.aero,
+.robo,
+.events,
+.clubs,
+.signup {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  height: 90vh;
+  font-size: 4rem;
+  background-position: center;
+  background-repeat: none;
+  background-size: cover;
+  text-shadow: 4px 4px 4px #fff;
 }
 
-.App-link {
-  color: #61dafb;
+.home {
+  background-image: url(./images/home.jpg);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.art {
+  background-image: url(./images/consulting.jpg);
+}
+
+.code {
+  background-image: url(./images/design.jpg);
+}
+
+
+
+
+.contactus {
+  background-image: url(./images/contactus.jpg);
+}
+
+.clubs {
+  background-image: url(./images/services.jpg);
+}
+
+.signup {
+  background-image: url(./images/signup.jpg);
 }
